name:                irc-core-bot
version:             0.1.0.0
synopsis:            Example bot using irc-core
description:         Example bot using irc-core
homepage:            https://github.com/glguy/irc-core
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2016 Eric Mertens
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable irc-core-bot
  main-is:             Main.hs
  build-depends:       base       >=4.9  && <4.13,
                       bytestring >=0.10 && <0.11,
                       hookup     >=0.2  && <0.4,
                       irc-core   >=2.7  && <2.8,
                       random     >=1.1  && <1.2,
                       text       >=1.2  && <1.3,
                       machines   >=0.6.3&& <0.7,
                       transformers >= 0.5 && < 0.6,
                       unordered-containers,
                       containers
  hs-source-dirs:      src
  default-language:    Haskell2010
