cabal-version:       2.2
name:                irc-core-bot
version:             0.1.0.0
synopsis:            Example bot using irc-core
description:         Example bot using irc-core
homepage:            https://github.com/glguy/irc-core
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2016,2020 Eric Mertens
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md

executable irc-core-bot
  main-is:             Main.hs
  hs-source-dirs:      src
  ghc-options:         -threaded
  default-language:    Haskell2010

  other-modules:
    Bot.Config

  build-depends:
    base       >=4.9  && <4.16,
    bytestring ^>=0.10,
    hookup     ^>=0.5,
    irc-core   ^>=2.10,
    random     >=1.1 && <1.3,
    text       ^>=1.2,
    containers ^>=0.6,
