cabal-version:       2.2
name:                irc-core-bot
version:             0.1.0.0
synopsis:            Example bot using irc-core
description:
  This package is intended to show what it might look like to use
  irc-core for your own IRC automation or client development.
  It is certainly not a useful bot on its own.

homepage:            https://github.com/glguy/irc-core
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2016,2020 Eric Mertens
category:            Network
build-type:          Simple
extra-doc-files:     ChangeLog.md
tested-with:         GHC==9.4.7

executable irc-core-bot
  main-is:             Main.hs
  hs-source-dirs:      src
  ghc-options:         -threaded
  default-language:    Haskell2010

  other-modules:
    Bot.Config

  build-depends:
    base       >=4.9  && <4.19,
    bytestring >=0.10 && <0.13,
    hookup     ^>=0.8,
    irc-core   ^>=2.11,
    random     >=1.1 && <1.3,
    text       >=1.2 && <2.2,
    containers ^>=0.6,
