cabal-version:       2.2
name:                hookup
version:             0.5
synopsis:            Abstraction over creating network connections with SOCKS5 and TLS
description:         This package provides an abstraction for communicating with line-oriented
                     network services while abstracting over the use of SOCKS5 and TLS (via OpenSSL)
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2016-2020 Eric Mertens
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md
homepage:            https://github.com/glguy/irc-core
bug-reports:         https://github.com/glguy/irc-core/issues
tested-with:         GHC==8.10.1

source-repository head
  type: git
  location: git://github.com/glguy/irc-core.git
  branch: v2

library
  hs-source-dirs:      src
  default-language:    Haskell2010

  exposed-modules:
    Hookup
    Hookup.OpenSSL

  other-modules:
    Hookup.Socks5
    Hookup.Concurrent

  c-sources:
    cbits/pem_password_cb.c

  build-depends:
    base                  >=4.11 && <4.15,
    async                 ^>=2.2,
    stm                   ^>=2.5,
    network               >=3.0  && <3.2,
    bytestring            >=0.10 && <0.11,
    attoparsec            >=0.13 && <0.14,
    HsOpenSSL             >=0.11.2.3 && <0.12,
    HsOpenSSL-x509-system >=0.1  && <0.2,
